# mssh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  release.sh
.github/workflows/: ci.yml  release.yml
DOC/: README.md  architecture.md  development.md  modules.md  ui-optimization.md
scripts/: build-compress.sh  deploy-compressed.sh
src/: app.rs  config.rs  events.rs  form_manager.rs  forms.rs  main.rs  message_manager.rs  navigation_manager.rs  proxy.rs  ssh.rs
src/ui/: dialog.rs  form.rs  import.rs  list.rs  mod.rs  proxy.rs  scrollbar.rs
