[package]
name = "mssh"
version = "2.0.0"
edition = "2021"
authors = ["Caterpolaris"]
description = "A modern SSH configuration management tool with TUI interface"
license = "MIT"
repository = "https://github.com/Caterpolaris/mssh"
homepage = "https://github.com/Caterpolaris/mssh"
documentation = "https://github.com/Caterpolaris/mssh/blob/main/README.md"
readme = "README.md"
keywords = ["ssh", "terminal", "tui", "configuration", "manager"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.70"

[[bin]]
name = "mssh"
path = "src/main.rs"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # 优化体积而非速度
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
